[package]
name = "librenet-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
librenet-core-rs = { path = "../librenet-core-rs" }
librenet-tun = { path = "../librenet-tun" }
librenet-storage = { path = "../librenet-storage" }
librenet-swarm = { path = "../librenet-swarm" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
libp2p = { version = "0.53", features = ["macros"] }
