[package]
name = "librenet-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
hex = "0.4"
reed-solomon-erasure = "6.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
librenet-core-rs = { path = "../librenet-core-rs" }
